"""SQLAlchemy model for PTAS user accounts."""

from sqlalchemy import Column, Integer, String
from sqlalchemy.orm import relationship
from Backend.database import Base

class User(Base):
    """Represent the user table in the application database.

    SQLAlchemy maps these attributes and relationships to persisted records.
    """
    __tablename__ = "users"

    id = Column(Integer, primary_key=True, index=True)
    full_name = Column(String(100), nullable=False)
    email = Column(String(100), unique=True, index=True, nullable=False)
    password_hash = Column(String(255), nullable=False)

    projects = relationship(
        "Project",
        back_populates="user",
        cascade="all, delete-orphan",
    )
