"""SQLAlchemy model for scan findings and vulnerability evidence."""

from datetime import UTC, datetime

from sqlalchemy import Column, DateTime, ForeignKey, Integer, String, Text
from sqlalchemy.orm import relationship

from Backend.database import Base


class Vulnerability(Base):
    """Represent the vulnerability table in the application database.

    SQLAlchemy maps these attributes and relationships to persisted records.
    """
    __tablename__ = "vulnerabilities"

    id = Column(Integer, primary_key=True, index=True)
    scan_id = Column(
        Integer,
        ForeignKey("scans.id", ondelete="CASCADE"),
        nullable=False,
        index=True,
    )
    host = Column(String(255), nullable=False)
    port = Column(Integer, nullable=True)
    service = Column(String(100), nullable=True)
    vulnerability_type = Column(String(100), nullable=False)
    severity = Column(String(20), nullable=False, default="MEDIUM")
    description = Column(Text, nullable=False)
    version = Column(String(255), nullable=True)
    cves = Column(Text, nullable=True)
    remediation = Column(Text, nullable=True)
    status = Column(String(20), nullable=False, default="OPEN")
    created_at = Column(DateTime, nullable=False, default=lambda: datetime.now(UTC))
    updated_at = Column(
        DateTime,
        nullable=False,
        default=lambda: datetime.now(UTC),
        onupdate=lambda: datetime.now(UTC),
    )

    scan = relationship("Scan", back_populates="vulnerabilities")
    recommendations = relationship(
        "Recommendation",
        back_populates="vulnerability",
        cascade="all, delete-orphan",
    )
