erDiagram
    USERS {
        INT id PK
        VARCHAR full_name
        VARCHAR email UK
        VARCHAR password_hash
    }

    PROJECTS {
        INT id PK
        INT user_id FK
        VARCHAR project_name
        TEXT description
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    TARGETS {
        INT id PK
        INT project_id FK
        VARCHAR target_name
        VARCHAR target_type
        VARCHAR target_value
        TEXT scope
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    SCOPE_VALIDATIONS {
        INT id PK
        INT project_id FK
        VARCHAR scope_rule_name
        VARCHAR scope_type
        VARCHAR scope_value
        TEXT description
        BOOLEAN is_inclusive
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    SCANS {
        INT id PK
        INT target_id FK
        VARCHAR scan_name
        VARCHAR scan_type
        VARCHAR status
        DATETIME started_at
        DATETIME completed_at
        TEXT scan_result
        DATETIME created_at
        DATETIME updated_at
    }

    VULNERABILITIES {
        INT id PK
        INT scan_id FK
        VARCHAR host
        INT port
        VARCHAR service
        VARCHAR vulnerability_type
        VARCHAR severity
        TEXT description
        VARCHAR version
        TEXT cves
        TEXT remediation
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    RECOMMENDATIONS {
        INT id PK
        INT vulnerability_id FK
        VARCHAR attack_technique
        VARCHAR mitre_technique_id
        TEXT exploitation_method
        VARCHAR risk_level
        INT priority
        INT likelihood
        INT impact
        TEXT prerequisites
        TEXT tools_required
        TEXT execution_steps
        TEXT post_exploitation
        INT confidence_score
        VARCHAR status
        VARCHAR approved_by
        DATETIME created_at
        DATETIME updated_at
    }

    REPORTS {
        INT id PK
        INT scan_id FK
        VARCHAR title
        TEXT description
        INT total_vulnerabilities
        INT critical_count
        INT high_count
        INT medium_count
        INT low_count
        INT info_count
        INT total_recommendations
        INT approved_recommendations
        INT pending_recommendations
        INT rejected_recommendations
        INT target_count
        INT scan_duration_seconds
        DATETIME scan_start_time
        DATETIME scan_end_time
        VARCHAR status
        VARCHAR format_type
        VARCHAR generated_by
        TEXT report_content
        DATETIME created_at
        DATETIME updated_at
        DATETIME exported_at
    }

    USERS ||--o{ PROJECTS : owns
    PROJECTS ||--o{ TARGETS : contains
    PROJECTS ||--o{ SCOPE_VALIDATIONS : defines
    TARGETS ||--o{ SCANS : has
    SCANS ||--o{ VULNERABILITIES : records
    SCANS ||--o{ REPORTS : produces
    VULNERABILITIES ||--o{ RECOMMENDATIONS : receives
